removed position fixed from the body
to prevent scrolling to the top by opening panels. Bug: if scrolled
down, opened a navi, clicked on “find” - focus happens, but header is
not visible

--- a/css/composition.css
+++ b/css/composition.css
@@ -544,9 +544,6 @@ body {
   color: #333333;
   overflow-x: hidden;
   position: relative; }
-  body.navi-open {
-    position: fixed;
-    overflow: hidden; }
 
 a, .search > label > .search-field {
   -webkit-transition: all linear 0.2s;
