--- a/sass/project/layouts/base-setup/_base-setup.sass
+++ b/sass/project/layouts/base-setup/_base-setup.sass
@@ -9,8 +9,5 @@ body
 	color: $textColor
 	overflow-x: hidden
 	position: relative
-	&.navi-open
-		position: fixed
-		overflow: hidden
 
 // CI constants
